--- a/historia.html
+++ b/historia.html
@@ -199,7 +199,7 @@ var ml_account = ml('accounts', '1862796', 'i2k6g9b0d5', 'load');
     </div>
 </section>
 
-<div id="custom-html-c7"><iframe name="teste" width="100%" height="500px" scrolling="yes" frameborder="0" src="http://online.fliphtml5.com/splac/fiah"></iframe>
+<div id="custom-html-c7"><iframe name="teste" width="100%" height="500px" scrolling="yes" frameborder="0" src="https://online.fliphtml5.com/splac/fiah"></iframe>
 
 
 </div>
