create github pages

--- a/flappy.html
+++ b/flappy.html
@@ -172,7 +172,7 @@
 
     <div class="container">
         <div class="media-container-row">
-            <div class="mbr-text col-12 mbr-fonts-style display-7 col-md-8"><p><strong>Atenção: </strong>Usuários de Iphone(IOS) não conseguem jogar o flappy newton. O jogo é compatível apenas com sistemas Android e os navegadores do computador :(</p></div>
+            <div class="mbr-text col-12 mbr-fonts-style display-7 col-md-8"><p><strong>Atenção: </strong>Usuários de Iphone(IOS) não conseguem jogar o flappy newton. O jogo é compatível apenas com sistemas Android e os navegadores do computador!</p></div>
         </div>
     </div>
 </section>
