--- a/page20.html
+++ b/page20.html
@@ -125,7 +125,7 @@
     </div>
 </section>
 
-<div id="custom-html-ce"><iframe name="AppNewton" width="100%" height="800px" scrolling="yes" frameborder="0" src="http://armazemdamusicabrasileira.blogspot.com"></iframe></div>
+<div id="custom-html-ce"><iframe src="http://armazemdamusicabrasileira.blogspot.com/" style="border:0px #ffffff none;" name="myiFrame" scrolling="yes" frameborder="1" marginheight="0px" marginwidth="0px" height="1000px" width="100%" allowfullscreen=""></iframe></div>
 
 <section once="footers" class="cid-rPJyv7S1OG" id="footer7-a6">
 
