--- a/kitdofa.html
+++ b/kitdofa.html
@@ -16,18 +16,15 @@
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
-  <link rel="stylesheet" href="assets/facebook-plugin/style.css">
-  <link rel="stylesheet" href="assets/soundcloud-plugin/style.css">
-  <link rel="stylesheet" href="assets/animatecss/animate.min.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
-  <link rel="stylesheet" href="assets/tether/tether.min.css">
+  <link rel="stylesheet" href="assets/animatecss/animate.min.css">
   <link rel="stylesheet" href="assets/socicon/css/styles.css">
+  <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
   
   
-
 </head>
 <body>
 
@@ -157,15 +154,34 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section--no-padding mbr-soundcloud-container" id="soundcloud1-2b" data-rv-view="421" style="background-color: rgb(0, 0, 0); padding-top: 1.5rem; padding-bottom: 1.5rem;">
-    <div class="mbr-section__container addons-container addons-row">
-            <div class=" addons-container-inner">
-                <figure class="mbr-figure mbr-figure--wysiwyg mbr-figure--full-width mbr-figure--caption-outside-bottom">
-                    <iframe class="mbr-embedded-video" frameborder="0" allowfullscreen="" src="https://w.soundcloud.com/player/?url=https%3A%2F%2Fapi.soundcloud.com%2Fplaylists%2F979200460&amp;amp;auto_play=false&amp;amp;hide_related=false&amp;amp;show_comments=true&amp;amp;show_user=true&amp;amp;show_reposts=false&amp;amp;visual=true"></iframe>
+<section group="Media" plugins="soundcloud-plugin" data-rv-view="326">
+
+    <mbr-parameters>
+        <header>Size</header>
+        <input type="checkbox" title="Full Screen" name="fullScreen">
+        <input type="checkbox" title="Full Width" name="fullWidth" checked="">
+        <input type="range" inline="" title="Top" name="paddingTop" min="0" max="10" step="1" value="0" condition="fullScreen == false">
+        <input type="range" inline="" title="Bottom" name="paddingBottom" min="0" max="10" step="1" value="0" condition="fullScreen == false">
+        <input type="range" inline="" name="scWidth" title="Player Width" min="4" max="12" value="12" step="1">
+        <header>Show/Hide</header>
+        <input type="checkbox" title="Title" name="showTitle">
+        <input type="checkbox" title="Autoplay" name="autoplay">
+        <input type="text" title="Track ID" name="trackId" value="234652184">
+        <input type="color" title="Bg Color" name="bgColor" value="#fafafa">
+    </mbr-parameters>
+
+    <div>
+        
+        <div class="row justify-content-center">
+            <div class="col-lg-{{scWidth}}">
+                <figure class="mobirise-loader mbr-figure mbr-figure--wysiwyg mbr-figure--full-width mbr-figure--caption-outside-bottom">
+                    <iframe class="mbr-embedded-video" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/{{trackId}}&amp;color=%23ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;show_teaser=true&amp;visual=true" frameborder="0" allowfullscreen=""></iframe>
                 </figure>
             </div>
-        <div class="clearfix"></div>
+        </div>
+
     </div>
+    <div class="clearfix"></div>
 </section>
 
 <section class="mbr-section article content14 cid-rQc7rZW6xT" id="content14-2e">
@@ -304,19 +320,15 @@
   <script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-  <script src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.5"></script>
-  <script src="https://apis.google.com/js/plusone.js"></script>
-  <script src="assets/facebook-plugin/facebook-script.js"></script>
-  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>
+  <script src="assets/smoothscroll/smooth-scroll.js"></script>
   <script src="assets/dropdown/js/nav-dropdown.js"></script>
   <script src="assets/dropdown/js/navbar-dropdown.js"></script>
-  <script src="assets/smoothscroll/smooth-scroll.js"></script>
+  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/theme/js/script.js"></script>
   
   
   <input name="animation" type="hidden">
-  
-</body>
+  </body>
 </html>
