create github pages

--- a/linknabio.html
+++ b/linknabio.html
@@ -183,7 +183,7 @@ var ml_account = ml('accounts', '1862796', 'i2k6g9b0d5', 'load');
                                 </div>
                                 <div id="collapse2_9" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo">
                                     <div class="panel-body p-4">
-                                        <p class="mbr-fonts-style panel-text display-7">Gostamos de criar formas de se conectar, conheça o espaço do fã para mais detalhes ou clique em um dos links abaixo:<br><br>-<a href="ep2020.html"><strong>Novo EP da banda</strong></a><br>-<a href="flappy.html" target="_blank"><strong>Flappy Newton</strong></a><br>-<a href="historia.html" target="_blank"><strong>HQs da Banda</strong></a><br>-<a href="quizz.html" target="_blank"><strong>Quem é você na Lady Newton?</strong></a><br>-<a href="blog.html" target="_blank"><strong>Blog</strong></a></p>
+                                        <p class="mbr-fonts-style panel-text display-7">Gostamos de criar formas de se conectar, conheça o espaço do fã para mais detalhes ou clique em um dos links abaixo:<br><br>-<a href="ep2020.html"><strong>Novo EP da banda</strong></a><br>-<a href="flappy.html" target="_blank"><strong>Flappy Newton</strong></a><br>-<a href="historia.html" target="_blank"><strong>Quadrinhos da Banda</strong></a><br>-<a href="quizz.html" target="_blank"><strong>Quem é você na Lady Newton?</strong></a><br>-<a href="blog.html" target="_blank"><strong>Blog</strong></a></p>
                                     </div>
                                 </div>
                             </div>
