create github pages

--- a/linknabio.html
+++ b/linknabio.html
@@ -8,12 +8,12 @@
   <meta name="twitter:card" content="summary_large_image"/>
   <meta name="twitter:image:src" content="assets/images/linknabio-meta.jpeg">
   <meta property="og:image" content="assets/images/linknabio-meta.jpeg">
-  <meta name="twitter:title" content="linknabio">
+  <meta name="twitter:title" content="Lady Newton.">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/20200717-135457-0000.png" type="image/x-icon">
   <meta name="description" content="Esse é o link mais importante do Mundo sobre a Lady Newton!">
   
-  <title>linknabio</title>
+  <title>Lady Newton.</title>
   <link rel="stylesheet" href="assets/icon54-v2/style.css">
   <link rel="stylesheet" href="assets/font-awesome/css/font-awesome.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
@@ -160,15 +160,27 @@ var ml_account = ml('accounts', '1862796', 'i2k6g9b0d5', 'load');
                     <div class="toggle-content">
                         
                         
-                        <div id="bootstrap-toggle" class="toggle-panel accordionStyles tab-content pt-5 mt-2">
+                        <div id="bootstrap-toggle" class="toggle-panel accordionStyles tab-content pt-5 mt-2"><div class="card">
+                                <div class="card-header" role="tab" id="headingOne">
+                                    <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse1_0" aria-expanded="false" aria-controls="collapse1">
+                                        <h4 class="mbr-fonts-style display-2">
+                                            <span class="sign mbr-iconfont mbri-arrow-down inactive"></span>Conteúdo em Destaque</h4>
+                                    </a>
+                                </div>
+                                <div id="collapse1_0" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne">
+                                    <div class="panel-body p-4">
+                                        <p class="mbr-fonts-style panel-text display-7">Lançamos um karaokê exclusivo da nossa música Ampulheta!&nbsp;<br><br>Aprenda a cantar agora mesmo e mande pra gente a sua versão :)<br><br><a href="#" target="_blank"><iframe width="300" height="215" src="https://www.youtube.com/embed/wzD5AtJ4DJE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe></a><a href="#" target="_blank"><br></a></p>
+                                    </div>
+                                </div>
+                            </div>
                             <div class="card">
                                 <div class="card-header" role="tab" id="headingOne">
-                                    <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse1_9" aria-expanded="false" aria-controls="collapse1">
+                                    <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse1_0" aria-expanded="false" aria-controls="collapse1">
                                         <h4 class="mbr-fonts-style display-2">
                                             <span class="sign mbr-iconfont mbri-arrow-down inactive"></span>Quem é a Lady Newton?</h4>
                                     </a>
                                 </div>
-                                <div id="collapse1_9" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne">
+                                <div id="collapse1_0" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne">
                                     <div class="panel-body p-4">
                                         <p class="mbr-fonts-style panel-text display-7">Somos a banda mais querida de Boa Viagem! Nossa missão é mostrar que o Rock pode ser um estilo divertido e cheio de sentimento sem perder a originalidade e a pegada dos riffs que marcaram a nossa vida.<br><br>A Lady Newton começou tocando nos melhores bares do Recife e aos poucos começamos a criar nossas composições, sem medo de experimentar e de combinar novos elementos.<br><br>Quer sentir um gosto do que a gente cria? saca esse video do nosso primeiro single!<br><br><a href="#" target="_blank"><iframe width="300" height="215" src="https://www.youtube.com/embed/4hMLM7l54z8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe></a><a href="#" target="_blank"><br></a></p>
                                     </div>
@@ -176,12 +188,12 @@ var ml_account = ml('accounts', '1862796', 'i2k6g9b0d5', 'load');
                             </div>
                             <div class="card">
                                 <div class="card-header" role="tab" id="headingTwo">
-                                    <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse2_9" aria-expanded="false" aria-controls="collapse2">
+                                    <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse2_0" aria-expanded="false" aria-controls="collapse2">
                                         <h4 class="mbr-fonts-style display-2">
-                                            <span class="sign mbr-iconfont mbri-arrow-down inactive"></span>&nbsp;Conteúdos Exclusivos</h4>
+                                            <span class="sign mbr-iconfont mbri-arrow-down inactive"></span>&nbsp;Material Extra</h4>
                                     </a>
                                 </div>
-                                <div id="collapse2_9" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo">
+                                <div id="collapse2_0" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo">
                                     <div class="panel-body p-4">
                                         <p class="mbr-fonts-style panel-text display-7">Gostamos de criar formas de se conectar, conheça o espaço do fã para mais detalhes ou clique em um dos links abaixo:<br><br>-<a href="ep2020.html"><strong>Novo EP da banda</strong></a><br>-<a href="flappy.html" target="_blank"><strong>Flappy Newton</strong></a><br>-<a href="historia.html" target="_blank"><strong>Quadrinhos da Banda</strong></a><br>-<a href="quizz.html" target="_blank"><strong>Quem é você na Lady Newton?</strong></a><br>-<a href="blog.html" target="_blank"><strong>Blog</strong></a></p>
                                     </div>
@@ -189,12 +201,12 @@ var ml_account = ml('accounts', '1862796', 'i2k6g9b0d5', 'load');
                             </div>
                             <div class="card">
                                 <div class="card-header" role="tab" id="headingThree">
-                                    <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse3_9" aria-expanded="true" aria-controls="collapse3">
+                                    <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse3_0" aria-expanded="true" aria-controls="collapse3">
                                         <h4 class="mbr-fonts-style display-2">
                                             <span class="sign mbr-iconfont mbri-arrow-down inactive"></span>&nbsp;Sobre o futuro da Lady</h4>
                                     </a>
                                 </div>
-                                <div id="collapse3_9" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
+                                <div id="collapse3_0" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
                                     <div class="panel-body p-4">
                                         <p class="mbr-fonts-style panel-text display-7">Estamos muito empolgados com o lançamento do nosso primeiro EP. Foi um processo indescritível e recomendamos que você<a href="ep2020.html"> conheça a página</a>&nbsp;onde contamos um pouco dessa história!<br><br>A jornada para o mundo autoral só está começando e é um prazer poder compartilhar disso com você!<br><br><br></p>
                                     </div>
