create github pages

--- a/ep2020.html
+++ b/ep2020.html
@@ -112,32 +112,9 @@
     
     <figure class="mbr-figure align-center">
         <div class="video-block" style="width: 100%;">
-            <div><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/5THWVV-n47g?rel=0&amp;amp;showinfo=0&amp;autoplay=1&amp;loop=1&amp;playlist=5THWVV-n47g" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
+            <div><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/Jf2uMSVOB4s?rel=0&amp;amp;showinfo=0&amp;autoplay=1&amp;loop=1&amp;playlist=Jf2uMSVOB4s" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
         </div>
     </figure>
-</section>
-
-<section class="extCountdown cid-sdZgZYEM6z" id="extCountdown3-ct">
-
-    
-
-    <div class="container-fluid pt-6 pb-6 full-count-container">
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-sm-12 col-lg-12 mbr-white pb-lg-0 pb-2">
-                    <h2 class="mbr-section-title mbr-fonts-style m-0 display-2"><br>Conte cada segundo, Ampulheta estreia nas plataformas digitais dia 06 de Novembro!</h2>
-                </div>
-                <div class="countdown-cont align-center col-lg-6">
-                    <div class="daysCountdown col-xs-3 col-sm-12 col-md-12" title="Days"></div>
-                    <div class="hoursCountdown col-xs-3 col-sm-12 col-md-12" title="Hours"></div>
-                    <div class="minutesCountdown col-xs-3 col-sm-12 col-md-12" title="Minutes"></div>
-                    <div class="secondsCountdown col-xs-3 col-sm-12 col-md-12" title="Seconds"></div>
-                    <div class="countdown " data-due-date="2020/11/06 00:01">
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
 </section>
 
 <section class="carousel slide testimonials-slider extSlider cid-scaSbYkVAX" data-interval="false" id="extSlider3-cp">
@@ -265,7 +242,6 @@
   <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
   <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>
-  <script src="assets/countdown/jquery.countdown.min.js"></script>
   <script src="assets/dropdown/js/nav-dropdown.js"></script>
   <script src="assets/dropdown/js/navbar-dropdown.js"></script>
   <script src="assets/mbr-testimonials-slider/mbr-testimonials-slider.js"></script>
