--- a/loja.html
+++ b/loja.html
@@ -58,6 +58,24 @@
   gtag('config', 'UA-159536362-1');
 </script>
 
+<!-- Facebook Pixel Code -->
+<script>
+  !function(f,b,e,v,n,t,s)
+  {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+  n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+  if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+  n.queue=[];t=b.createElement(e);t.async=!0;
+  t.src=v;s=b.getElementsByTagName(e)[0];
+  s.parentNode.insertBefore(t,s)}(window, document,'script',
+  'https://connect.facebook.net/en_US/fbevents.js');
+  fbq('init', '3616642218421375');
+  fbq('track', 'PageView');
+</script>
+<noscript><img height="1" width="1" style="display:none"
+  src="https://www.facebook.com/tr?id=3616642218421375&ev=PageView&noscript=1"
+/></noscript>
+<!-- End Facebook Pixel Code -->
+
 <!-- /Analytics -->
 
 
@@ -167,7 +185,7 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="yfOSUkl1e3LDcHx/aV+9WJQr67ShyI8k1mOn6yf2XZFh64tqZ6kdq0hlllrJlGwf+sSyw7zzYInKzlz/DXxxXgmS2B/NzNkYG7Ob7C25SqFNt9AUKHgNUWpe831rBCP/.VwqSPE6eOAQVDy/DJoI4Cpk/s8UjODk27Jvcw2yU//HHCWm9rHm2xa9QogEmA5CkDYJp0pCeMZ5tF8DGQ1yLSJ7l2VlOOLMka2wS00WCYIektUZkzc6b0tfeg1r7pK8E">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="t7DjqEZOnGIpfxsljBYAvabaL6TnvfA8tUKPJ6ra7/j90lGDNc8/uTX5Hh4+xd+3LqAc/mUs5sLr24P6yPz1eUk0kboY84srQIfq6dXnPk8idPm7OvvS80ASB6my163B.WqfrzBgrIpXHXd82D6T063n/NEAYPW5sDJ8dFkcAN+H2REdf7i7raTHciWPWlnEvIWIWyLn51mIBJxjAcO9lWdRY3cEF+gdHpQ3mFDBzG0YycezGu5Z23b+aB+tezjmw">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Obrigado, iremos responder o mais rápido possível!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
