create github pages

--- a/sevilha.html
+++ b/sevilha.html
@@ -25,7 +25,9 @@
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
   
-  
+  <script> 
+var el = document.getElementById("facebook"); el.addEventListener("click", fbq('track', 'Purchase', {currency: "USD", value: 1.00}), false); 
+</script>
 </head>
 <body>
 
@@ -143,7 +145,7 @@
         <div class="media-container-row">
             <div class="title col-12 col-md-8">
                 <h2 class="align-center pb-3 mbr-fonts-style display-1">Sevilha</h2>
-                <h3 class="mbr-section-subtitle align-center mbr-light mbr-fonts-style display-5">Um romance em forma de música! Conheça o segundo single da banda de rock Lady Newton. È a música mais fofa de Recife!</h3>
+                <h3 class="mbr-section-subtitle align-center mbr-light mbr-fonts-style display-4">Um romance em forma de música! Conheça o segundo single da banda de rock Lady Newton. È a música mais fofa de Recife!</h3>
                 
             </div>
         </div>
