--- a/sevilha.html
+++ b/sevilha.html
@@ -7,7 +7,7 @@
   
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/20200717-135457-0000.png" type="image/x-icon">
-  <meta name="description" content="Web Maker Description">
+  <meta name="description" content="O novo rock romântico de 2021!">
   
   <title>Sevilha</title>
   <link rel="stylesheet" href="assets/bootstrap-material-design-font/css/material.css">
@@ -27,6 +27,18 @@
   
   <script> 
 var el = document.getElementById("facebook"); el.addEventListener("click", fbq('track', 'Purchase', {currency: "USD", value: 1.00}), false); 
+</script>
+
+<!-- Hotjar Tracking Code for www.ladynewton.com -->
+<script>
+    (function(h,o,t,j,a,r){
+        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+        h._hjSettings={hjid:1926982,hjsv:6};
+        a=o.getElementsByTagName('head')[0];
+        r=o.createElement('script');r.async=1;
+        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+        a.appendChild(r);
+    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
 </script>
 </head>
 <body>
