create github pages

--- a/sevilha.html
+++ b/sevilha.html
@@ -189,10 +189,10 @@ var el = document.getElementById("facebook"); el.addEventListener("click", fbq('
     <div class="container">
         <div class="media-container-row title">
             <div class="col-12 col-md-8">
-                <div class="mbr-section-btn align-center"><a class="btn btn-white-outline display-4" href="https://open.spotify.com/track/0J2cqKqAjCRzAMM0HyPlve"><span class="fa fa-spotify mbr-iconfont mbr-iconfont-btn"></span>  SPOTIFY&nbsp;</a>
-                    <a class="btn btn-white-outline display-4" href="https://www.deezer.com/br/track/1173872602"><span class="mdi-av-equalizer mbr-iconfont mbr-iconfont-btn"></span>  DEEZER &nbsp;</a>
-                    <a class="btn btn-white-outline display-4" href="https://music.apple.com/us/album/sevilha-single/1544202097"><span class="socicon socicon-apple mbr-iconfont mbr-iconfont-btn"></span>APPLE &nbsp; &nbsp;&nbsp;</a>
-                    <a class="btn btn-white-outline display-4" href="https://www.youtube.com/watch?v=N50NASBT7ko&feature=youtu.be"><span class="socicon socicon-youtube mbr-iconfont mbr-iconfont-btn"></span>  YOUTUBE  </a></div>
+                <div class="mbr-section-btn align-center"><a class="btn btn-white-outline display-4" href="https://open.spotify.com/track/0J2cqKqAjCRzAMM0HyPlve" onclick="”ga(‘Ouviu’,‘Spotify’,‘LinkExterno’,‘Clicou’,‘Spotify’,‘1’);”"><span class="fa fa-spotify mbr-iconfont mbr-iconfont-btn"></span>  SPOTIFY&nbsp;</a>
+                    <a class="btn btn-white-outline display-4" onclick="”ga(‘Ouviu’,‘Deezer’,‘LinkExterno’,‘Clicou’,‘Deezer’,‘1’);”" href="https://www.deezer.com/br/track/1173872602"><span class="mdi-av-equalizer mbr-iconfont mbr-iconfont-btn"></span>  DEEZER &nbsp;</a>
+                    <a class="btn btn-white-outline display-4" href="https://music.apple.com/us/album/sevilha-single/1544202097" onclick="”ga(‘Ouviu’,‘Apple’,‘LinkExterno’,‘Clicou’,‘Apple’,‘1’);”"><span class="socicon socicon-apple mbr-iconfont mbr-iconfont-btn"></span>APPLE &nbsp; &nbsp;&nbsp;</a>
+                    <a class="btn btn-white-outline display-4" onclick="”ga(‘Ouviu’,‘Youtube’,‘LinkExterno’,‘Clicou’,‘Youtube’,‘1’);”" href="https://www.youtube.com/watch?v=N50NASBT7ko&feature=youtu.be"><span class="socicon socicon-youtube mbr-iconfont mbr-iconfont-btn"></span>  YOUTUBE  </a></div>
             </div>
         </div>
     </div>
