create github pages

--- a/aplicativo.html
+++ b/aplicativo.html
@@ -30,7 +30,15 @@
 <body>
 
 <!-- Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-M1GSRL8BHZ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-M1GSRL8BHZ');
+</script>
 
 
 
@@ -180,7 +188,7 @@
                 <div class="form-block">
                     <div data-form-type="formoid">
                         <!---Formbuilder Form--->
-                        <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="CT2IJ/5yI/UB9lw1uTOVaOrmt6bPiChwdHeRys4xhNiQmfXxW2kEVa/ZF22C5sseJXXRjNT+MXpVy9VbFORQ6iRYDOQL3mVrmYO+psLWrED1PjVxhBK641p6vbVoAKN8.RdjEdgQegS6leso5DdllKW5yS2yi5gFNMCW6iw3NavO3clX1MkM1bAUyfGWbav9dNJZU+KMS4X6pn9yyhWlr+sLuDDBY+ZM/cliFYFyGSyDEXPBOjs6LpHAa1HR7e3ic">
+                        <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Uh/giPZ35t2IZ4E0WUG6ewwIeW/jTNb+oolEsukhIRJ28uM5mM7l3UPgVJGsu3gx0e/ZGcT5uKXSpznxH5YhGMQIrNOII3RT1RLeKRwg1bcNoLiTYMHwbwfUafeK/23O.OIlbjGhZJ8plhW/Y+0325FY4r7UfyDPuIQMdTDahOkKUmHAS14fvL3v99lckpcv9W/dondQx+UbDstA6jP/6YporE34spguq1YbInSX+3AMrbg7gk2y8WUVaTlc0n1jI">
                             <div class="form-row">
                                 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Obrigado pelo carinho!</div>
                                 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"></div>
