--- a/epk.html
+++ b/epk.html
@@ -30,7 +30,15 @@
 <body>
 
 <!-- Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-M1GSRL8BHZ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-M1GSRL8BHZ');
+</script>
 
 
 
@@ -247,7 +255,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="vUIlBB6rNpTKGdw8tqqbVz9rW6uThlcnVv/35df+uQu33+EgdIO5GjjOeaWCfiPD1vc+8LT1kHW0xdHxSIECnFQhxC4BPyYa7IYOpToW9+wxLv3dYA25Tnrq9xxJN8zG.Yh+y5LDpZm/sGkILb8s/bx1b7iSM0EwJGPeF3dwLP5MP14OgRfTKj6MIINAITHkdvMxxbNJV2bUhpzQD5eRkldGsA5qCR4Zb+2xlsDMNkcL0rnOAWwNkwBIYs9Jl8whS">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="fkxQqQTG3r5kLcWXnozqQAjEz+7FH8MHFIhzz+F0IYjs7W+2w/Atyj8utlid/4axnnaDelprsyUC27Qi4AAdCKJVAS7yB+2bmT/iexP76MOlKk8U/UzxA8gAKshBZg4l.je1R9bN+CKcvMF9wbGCpuddHj11+u36F7y0S/S625gu8cV3yMZYZ0YzYV5l2IYSuprMX7fF4VWSA5HA+VjRR2YreoFMqGGnW7ontxjVO8nQay/JZ5Pm8G9164G+bh5pE">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Obrigado por entrar em contato conosco, vamos enviar uma resposta o quanto antes!
 
