--- a/5-coisas-que-todo-fa-deve-saber.html
+++ b/5-coisas-que-todo-fa-deve-saber.html
@@ -45,7 +45,15 @@ var ml_account = ml('accounts', '1862796', 'i2k6g9b0d5', 'load');
 <body>
 
 <!-- Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-M1GSRL8BHZ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-M1GSRL8BHZ');
+</script>
 
 
 
