--- a/loja.html
+++ b/loja.html
@@ -33,7 +33,15 @@
 <body>
 
 <!-- Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-M1GSRL8BHZ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-M1GSRL8BHZ');
+</script>
 
 
 
@@ -185,7 +193,7 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="OhtT/yf3lwuIOukqmWH5cv6fNk9wyVvd/KZAKeNRhnLMIwECuyQyXgyFVxyMrTdYoas8iAF9d7WWkOa7cfgV79Rh6UAcTnBxITq7mEQDVwl38/HqgbIoF8tV6hr4ZwbR.QJGzdjVyqRVCE2uyl2b+6J5/aYcEO6cZ6ZBNrvgck6/uFvPxahw0AwyTw6DRGxfRmEHPePXisNIOitlw9HQetCE1NuMgolHxRNCK1+fxX9VrZKf0t6GWfH2CFWXLgMIR">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="FHR4ajyeiBjtMAaBOWz+5LaXAZdkjLsanaWoUa6gyKwr5q0WaqNs/KiCZVMV01iuQmToyVCcXP+s1/Ag+wophFEnKWwNaN440JE5M7xgbLs4Q9wdWTmTQPZuZLnQAv6z.ZXjJoROJEiG3n8y9xaENg3fMMJ0UWd2lNUCNQt9htOOxibjGaAVsoooKMdO5JCd1gfsq5fvgyNE0xTp/P2B0ytDVhFTBiLNJkXRs/KBgBRkZpv9QQ6clVD3L3mixWDeG">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Obrigado, iremos responder o mais rápido possível!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
