--- a/quizz.html
+++ b/quizz.html
@@ -30,7 +30,15 @@ O resultado é revelador! ">
 <body>
 
 <!-- Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-M1GSRL8BHZ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-M1GSRL8BHZ');
+</script>
 
 
 
