--- a/loja.html
+++ b/loja.html
@@ -43,7 +43,13 @@
   gtag('config', 'G-M1GSRL8BHZ');
 </script>
 
-
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-WNMCDNT');</script>
+<!-- End Google Tag Manager -->
 
 <!----  TUDO EM CIMA É FIREBASE -->
 <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
@@ -193,7 +199,7 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="FHR4ajyeiBjtMAaBOWz+5LaXAZdkjLsanaWoUa6gyKwr5q0WaqNs/KiCZVMV01iuQmToyVCcXP+s1/Ag+wophFEnKWwNaN440JE5M7xgbLs4Q9wdWTmTQPZuZLnQAv6z.ZXjJoROJEiG3n8y9xaENg3fMMJ0UWd2lNUCNQt9htOOxibjGaAVsoooKMdO5JCd1gfsq5fvgyNE0xTp/P2B0ytDVhFTBiLNJkXRs/KBgBRkZpv9QQ6clVD3L3mixWDeG">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="hw3kDcBrYkKWoy3K7zdxtTdlo95kidesKGbJK5ylEWVy6lPrjdO8fYRXkqjs6VklIIlU/Zh4kzt9cxzETvA2QwDUitOCmOKCD+IXwo/o8nOS9Wo05LvW+Jt6Usitqhb0.WigWTcgKqJr4R4MU4PVreDsjxmfLSDj7zKOlzoZqCkdlhVgCCMsubX+3bWA3KAgutyU13XvZWgFRjfMPrFYUji/oMssE0YuUfTSxrmL286FYs4KT/AARn1cUsLfjVOGt">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Obrigado, iremos responder o mais rápido possível!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
