--- a/aplicativo.html
+++ b/aplicativo.html
@@ -40,7 +40,13 @@
   gtag('config', 'G-M1GSRL8BHZ');
 </script>
 
-
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-WNMCDNT');</script>
+<!-- End Google Tag Manager -->
 
 <!----  TUDO EM CIMA É FIREBASE -->
 <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
@@ -188,7 +194,7 @@
                 <div class="form-block">
                     <div data-form-type="formoid">
                         <!---Formbuilder Form--->
-                        <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Uh/giPZ35t2IZ4E0WUG6ewwIeW/jTNb+oolEsukhIRJ28uM5mM7l3UPgVJGsu3gx0e/ZGcT5uKXSpznxH5YhGMQIrNOII3RT1RLeKRwg1bcNoLiTYMHwbwfUafeK/23O.OIlbjGhZJ8plhW/Y+0325FY4r7UfyDPuIQMdTDahOkKUmHAS14fvL3v99lckpcv9W/dondQx+UbDstA6jP/6YporE34spguq1YbInSX+3AMrbg7gk2y8WUVaTlc0n1jI">
+                        <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="BTBZ9UIa+SEOtguLmk5yNWw0Y296oi0c32IlymWNsWbF+JbndLtStz+I4yrSvWU+CCpP+3ZqaLkcz2BW1uyF8WV5DolUZm9tH0iBUD4FtZQwY5pdqSe/+b6F/RryoFlz.iUI3YaHmMUv59QGtJn/QsMjQ+Bxn/A2lZWeitCA4470aRLemFkprBuWn7IcIO5wHmUDXR3txf7CL/K541ZQ/0ed+Hv3NX70Oe78Q/3DezQeyF2KtABNSzyAGUtJC69Y5">
                             <div class="form-row">
                                 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Obrigado pelo carinho!</div>
                                 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"></div>
