create github pages

--- a/aplicativo.html
+++ b/aplicativo.html
@@ -59,6 +59,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   });
 </script>
 
+
+
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-159536362-1"></script>
 <script>
@@ -86,6 +88,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   src="https://www.facebook.com/tr?id=3616642218421375&ev=PageView&noscript=1"
 /></noscript>
 <!-- End Facebook Pixel Code -->
+
+
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WNMCDNT"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 
 <!-- /Analytics -->
 
@@ -194,7 +202,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 <div class="form-block">
                     <div data-form-type="formoid">
                         <!---Formbuilder Form--->
-                        <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="BTBZ9UIa+SEOtguLmk5yNWw0Y296oi0c32IlymWNsWbF+JbndLtStz+I4yrSvWU+CCpP+3ZqaLkcz2BW1uyF8WV5DolUZm9tH0iBUD4FtZQwY5pdqSe/+b6F/RryoFlz.iUI3YaHmMUv59QGtJn/QsMjQ+Bxn/A2lZWeitCA4470aRLemFkprBuWn7IcIO5wHmUDXR3txf7CL/K541ZQ/0ed+Hv3NX70Oe78Q/3DezQeyF2KtABNSzyAGUtJC69Y5">
+                        <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="mtMOiApZw0TMc7pgynO2tBSxrt1mWZeqsQF2lKNfdEip5CPxoGgwFwjFarnozC36oleleCCF4wGjKJm9XdAQaiPyUl5DOHhmhsy06IztcgGiTc+87U+bK83AcFpXkFXH.Ye3iVVozZ6T96xp8d0va9jgALs3/9L9JW8oD2PJWEDMW0L7NdZnrPrhC8MauSBCm2Dev5hGW4Is45t5EkZwPEhFEhUQLiwgzseXsueAmQUkvcM/lzW/wetN+6D0wR/CK">
                             <div class="form-row">
                                 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Obrigado pelo carinho!</div>
                                 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"></div>
