--- a/epk.html
+++ b/epk.html
@@ -59,6 +59,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   });
 </script>
 
+
+
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-159536362-1"></script>
 <script>
@@ -86,6 +88,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   src="https://www.facebook.com/tr?id=3616642218421375&ev=PageView&noscript=1"
 /></noscript>
 <!-- End Facebook Pixel Code -->
+
+
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WNMCDNT"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 
 <!-- /Analytics -->
 
@@ -261,7 +269,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="nH3EZdmfsktc0lkd6/3xot3M7cDDXy9Gxm3stTvKM87RL8Z1keAntw9ZmDikjzZPy53iqF0OdWVM3k4/UxRZNNrv3+oeb0ev8hiYBjcCFJnSbFI4hLezZa2hOoSxInJv.TFTvDL82Ho0ropJc4MRdfM5HUUpkRUGPovZqCqTWXJazwIdfvK1cZdygHPLRJ/xBhc45eZ0BSsU3s8NWouqkEnyMGBIiVqYT5zcP1HOQvmJc+idleHXfaDEL7NasrXc6">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Y5vbelFY1eHT4to97brdQNBzr76+eKTwekvdu97MuG26fsa3gknawhcV7TY4R3DXOjCzckm/vNNEaaLQ13HZ4AZCzBMbMu0Zpz1G6Q5osX+/+2PHfgZ4secNP5R3XmiQ.x0ztbyCB4JZ3iYZfaxIJLfu7aQaLSzUj2DnrMl3cyGcwlH8ua7JGx+3yvPTABb7lGYW3/NR9VxYiLnoS3upUSNnmLomsyfwa1N5mb5BxSnN2nWb7Dx1pCg9nZCwkHHt1">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Obrigado por entrar em contato conosco, vamos enviar uma resposta o quanto antes!
 
