--- a/loja.html
+++ b/loja.html
@@ -62,6 +62,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   });
 </script>
 
+
+
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-159536362-1"></script>
 <script>
@@ -89,6 +91,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   src="https://www.facebook.com/tr?id=3616642218421375&ev=PageView&noscript=1"
 /></noscript>
 <!-- End Facebook Pixel Code -->
+
+
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WNMCDNT"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 
 <!-- /Analytics -->
 
@@ -199,7 +207,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="hw3kDcBrYkKWoy3K7zdxtTdlo95kidesKGbJK5ylEWVy6lPrjdO8fYRXkqjs6VklIIlU/Zh4kzt9cxzETvA2QwDUitOCmOKCD+IXwo/o8nOS9Wo05LvW+Jt6Usitqhb0.WigWTcgKqJr4R4MU4PVreDsjxmfLSDj7zKOlzoZqCkdlhVgCCMsubX+3bWA3KAgutyU13XvZWgFRjfMPrFYUji/oMssE0YuUfTSxrmL286FYs4KT/AARn1cUsLfjVOGt">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="xnFAzwBnJ/mgRas+evA66OIJOupF0aZPHUOw7bZZXFLi5KxZZcB0lTJNwZpmZco4l/2Tx9SJVNqkGByyzb8puuTdDr0ZYGkYjZluJW5jQOV7VdixiLeVLkJAFJYPLQhE.R+Y7L5ldpnXANX8DxXTE69wEBih9y36bqxFag5fOl6MUQC5V6ly5D8Cl4A+/H2WgLHtIV3airIKupvxb3aB8ZHh/4kPpCzqBS90Imt3mgpM9ofAz+D4CKrj+AuUpOCD+">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Obrigado, iremos responder o mais rápido possível!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
