--- a/link.html
+++ b/link.html
@@ -1,5 +1,5 @@
 
 <h1>Oi</h1>
 <script>
-  window.location.replace = "http://stackoverflow.com";
+  window.location = "http://stackoverflow.com";
 </script>
