--- a/espacodofa.html
+++ b/espacodofa.html
@@ -213,13 +213,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div class="container">
         <div class="inner-container" style="width: 100%;">
             <hr class="line" style="width: 20%;">
-            <div class="section-text align-center mbr-fonts-style display-5">Fizemos esse espaço para você!<br>Aqui você tem acesso a todo conteúdo da banda, sem censura, sem anúncios, sem algorítimos.<br><br>Escute a nossa autoral aqui embaixo!</div>
+            <div class="section-text align-center mbr-fonts-style display-5">Fizemos esse espaço para você!<br>Aqui você tem acesso a todo conteúdo da banda, sem censura, sem anúncios, sem algorítimos.<br><br>Aqui você pode ler a história da banda, jogar o flappy newton e fazer um quizz pra descobrir quem você é na banda!</div>
             <hr class="line" style="width: 20%;">
         </div>
-        
-<div>
-    <iframe width="100%" height="100" background-color="#000000" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/752826628%3Fsecret_token%3Ds-ihGaM&amp;color=%23ff3366&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;show_teaser=true"></iframe>
-</div>
+    
         </div>
 </section>
 
