--- a/link.html
+++ b/link.html
@@ -1,3 +1,3 @@
 <script>
-  window.location = "http://stackoverflow.com";
+  window.location = "https://www.canva.com/design/DAEaWEMDt0Y/Vv3G1rdTLiHeSMCHOK-_AQ/view?website#2";
 </script>
