create github pages

--- a/index.html
+++ b/index.html
@@ -59,17 +59,6 @@
 /></noscript>
 <!-- End Facebook Pixel Code -->
 
-<!-- MailerLite Universal -->
-<script>
-(function(m,a,i,l,e,r){ m['MailerLiteObject']=e;function f(){
-var c={ a:arguments,q:[]};var r=this.push(c);return "number"!=typeof r?r:f.bind(c.q);}
-f.q=f.q||[];m[e]=m[e]||f.bind(f.q);m[e].q=m[e].q||f.q;r=a.createElement(i);
-var _=a.getElementsByTagName(i)[0];r.async=1;r.src=l+'?v'+(~~(new Date().getTime()/1000000));
-_.parentNode.insertBefore(r,_);})(window, document, 'script', 'https://static.mailerlite.com/js/universal.js', 'ml');
-
-var ml_account = ml('accounts', '1862796', 'i2k6g9b0d5', 'load');
-</script>
-<!-- End MailerLite Universal -->
 </head>
 <body>
 
@@ -202,7 +191,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1">
                     Lady Newton</h1>
                 
-                <p class="mbr-text pb-3 mbr-fonts-style display-5"><br>Quem foi que disse que banda de rock tem que ser levada a sério?<br><br>De Recife para o mundo, a Lady Newton desafia essa noção com muito humor e uma forma diferente de interagir com os fãs. Tudo isso sem perder a essência do indie rock nacional, com riffs e letras que lembram as inflûencias da banda</p>
+                <p class="mbr-text pb-3 mbr-fonts-style display-5"><br>Quem foi que disse que banda de rock tem que ser levada a sério?<br><br>De Recife para o mundo, a Lady Newton desafia essa noção com muito humor e uma forma irreverente de interagir com os fãs. Tudo isso sem perder a essência do indie rock nacional, com riff, letra e sotaque próprios.</p>
                 <div class="mbr-section-btn"><a class="btn btn-md btn-secondary display-2" href="espacodofa.html">Quero ouvir</a>
                     <a class="btn btn-md btn-white-outline display-2" href="conhecaladynewton.html">Espaço do Fã</a></div>
             </div>
